# picachv-proof

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  plan.md  run  rust-toolchain
backup/: api.rs  old_ideas.md
docs/: algebraic_structures.md  api_load.md  policy_to_executors.md  query_plan.md
examples/: Makefile.toml
examples/builtin_executor/: Cargo.toml
examples/builtin_executor/src/: main.rs
examples/executor_lib/: Cargo.toml
examples/executor_lib/src/: lib.rs
examples/executor_user/: Cargo.toml  Makefile
examples/executor_user/src/: main.rs
examples/module_lib/: Cargo.toml
examples/module_lib/src/: lib.rs
examples/module_load/: Cargo.toml
examples/module_load/src/: main.rs
examples/simple_executor/: Makefile.toml
examples/simple_executor/executor_lib/: Cargo.toml
examples/simple_executor/executor_lib/src/: lib.rs
examples/simple_executor/executor_user/: Cargo.toml  Makefile
examples/simple_executor/executor_user/src/: main.rs
examples/simple_policy/: Cargo.toml
examples/simple_policy/src/: main.rs
policy_algebra/: Cargo.toml
policy_algebra/src/: cell.rs  lib.rs
policy_carrying_data/: Cargo.toml
policy_carrying_data/src/: annotations.rs  api.rs  arithmetic.rs  cell.rs  comparator.rs  data_type.rs  field.rs  group.rs  lazy.rs  lib.rs  macros.rs  policy.rs  pretty.rs  privacy.rs  record.rs  row.rs  schema.rs
policy_carrying_data/src/executor/: arena.rs  filter.rs  mod.rs  projection.rs  scan.rs
policy_carrying_data/src/plan/: expr.rs  mod.rs  physical_expr.rs
policy_core/: Cargo.toml
policy_core/grammar/: policy_definition_language.lalrpop
policy_core/src/: ast.rs  data_type.rs  error.rs  expr.rs  ffi.rs  lattice.rs  lib.rs  macros.rs  policy.rs  types.rs
policy_execution/: Cargo.toml
policy_execution/src/: api.rs  context.rs  lazy.rs  lib.rs  sql.rs  udf.rs
policy_execution/src/executor/: apply.rs  arena.rs  built_in.rs  builtin.rs  distinct.rs  filter.rs  groupby_partitioned.rs  join.rs  mod.rs  projection.rs  scan.rs
policy_execution/src/plan/: context.rs  mod.rs  physical_expr.rs
policy_ffi/: Cargo.toml
policy_ffi/src/: lib.rs  static_impl.rs
policy_function/: Cargo.toml
policy_function/src/: func.rs  lib.rs  privacy.rs
policy_generator/: Cargo.toml
policy_generator/grammar/: policy_definition_language.lalrpop  temptation.ply
policy_generator/src/: generator.rs  main.rs
policy_generator/templates/: load_module.template
policy_parse/: Cargo.toml
policy_parse/grammar/: policy_definition_language.lalrpop
policy_parse/src/: ast.rs  lib.rs
policy_privacy/: Cargo.toml
policy_privacy/src/: dp.rs  k_anon.rs  lib.rs
policy_proc_macro/: Cargo.toml
policy_proc_macro/src/: executors.rs  fields.rs  lib.rs
policy_proc_macro/tests/: policy_derive.rs
policy_proof/: README.Md  README.md
policy_proof/coq/: TODOs  _CoqProject  data_model.v  eq_facts.v  finite_bags.v  formula.v  lattice.glob  lattice.v  ordering.v  policy.glob  policy.v  prov.v  query.glob  query.v  relation.v  security.v  semantics.v  tuple.glob  types.glob  types.v  util.v
policy_proof/coq/.coq_backup/: cell.v  semantics_old.v
policy_proof/coq/coq_backup/: cell.v
policy_proof/lean/: Main.lean  lakefile.lean
policy_utils/: Cargo.toml
policy_utils/src/: lib.rs
src/: main.rs
test_data/: 1_test_parse.ply  2_test_parse.ply  simple_csv.csv  uspop.csv
theories/: TODOs  _CoqProject  config.v  data_model.v  expression.v  finite_bags.v  formula.v  lattice.v  prov.v  relation.v  security.v  semantics.v  termination.v  tests.v  todos.md  trace.v  types.v  util.v
theories/.coq_backup/: cell.v
