[package]
name = "policy_carrying_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prettyprint", "use_csv"]
use_csv = ["csv"]
prettyprint = ["papergrid"]
# Enable the generation of FFI-safe Rust-to-Rust trait objects.
load_module = []

[dependencies]
policy_core = { path = "../policy_core" }
papergrid = { version = "0.9.0", optional = true }
csv = { version = "1.2.2", optional = true }
bitflags = "2.3.1"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.99"

[lib]
doctest = false
