[package]
name = "policy_carrying_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prettyprint", "use_csv"]
use_csv = ["csv"]
prettyprint = ["tabled"]
# Enable the generation of FFI-safe Rust-to-Rust trait objects.
load_module = []

[dependencies]
policy_core = { path = "../policy_core" }
tabled = { version = "0.12.2", optional = true }
csv = { version = "1.2.2", optional = true }
bitflags = "2.3.1"
lazy_static = "1.4.0"
libloading = "0.8.0"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.99"
roaring = { version = "0.10.1", features = ["serde"] }

[lib]
doctest = false
