[package]
name = "policy_carrying_data"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prettyprint"]
std = ["use_csv", "tabled/std"]
use_csv = ["csv"]
prettyprint = ["tabled"]
# Enable the generation of FFI-safe Rust-to-Rust trait objects.
load_module = []

[dependencies]
bitflags = "2.3.1"
csv = { version = "1.2.2", optional = true }
hashbrown = { version = "0.14.0", features = ["serde"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
policy_core = { path = "../policy_core" }
serde = { version = "1.0.164", features = [
  "alloc",
  "derive",
  "rc",
], default-features = false }
serde_json = { version = "1.0.99", features = [
  "alloc",
], default-features = false }
tabled = { version = "0.12.2", optional = true, default-features = false }

[dev-dependencies]
csv = { version = "1.2.2" }

[lib]
doctest = false
