[package]
name = "policy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
libloading = "0.8.0"
num_enum = "0.6.1"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.99"

[lib]
doctest = false
