[package]
name = "policy_core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ast-serde = []

[dependencies]
ordered-float = { version = "3.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
serde = { version = "1.0.164", features = [
  "alloc",
  "derive",
  "rc",
], default-features = false }
serde_json = { version = "1.0.99", features = [
  "alloc",
], default-features = false }
typetag = "0.2.8"

[lib]
doctest = false
