[package]
name = "policy_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.2"
lazy_static = "1.4.0"
libloading = "0.8.0"
log = "0.4.19"
policy_carrying_data = { path = "../policy_carrying_data" }
policy_core = { path = "../policy_core" }
serde_json = "1.0.99"

[features]
default = []
# Enable built-in executors.
builtin = []
