[package]
name = "policy_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.2"
log = "0.4.19"
policy_carrying_data = { path = "../policy_carrying_data" }
policy_core = { path = "../policy_core" }
policy_ffi = { path = "../policy_ffi" }
policy_utils = { path = "../policy_utils" }
serde = { version = "1.0.166", features = ["rc", "derive"] }
serde_json = "1.0.99"
typetag = "0.2.8"

[features]
default = []
# Enable built-in executors.
builtin = []
