[package]
name = "policy_execution"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-sql"]
# Enable support for SQL.
use-sql = []
# Support for module-like executor set.
modular = ["policy_ffi/modular"]

[dependencies]
bitflags = "2.3.2"
hashbrown = { version = "0.14.0", features = ["serde"] }
log = "0.4.19"
policy_carrying_data = { path = "../policy_carrying_data" }
policy_core = { path = "../policy_core" }
policy_ffi = { path = "../policy_ffi" }
policy_utils = { path = "../policy_utils" }
serde = { version = "1.0.166", features = [
  "alloc",
  "rc",
  "derive",
], default-features = false }
serde_json = { version = "1.0.99", features = [
  "alloc",
], default-features = false }
spin = { version = "0.9.8", features = ["rwlock"] }
sqlparser = { version = "0.35.0", default-features = false }
typetag = "0.2.8"
