[package]
name = "policy_ffi"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.0", features = ["serde"] }
lazy_static = "1.4.0"
libloading = "0.8.0"
policy_core = { path = "../policy_core" }
serde_json = "1.0.99"

[build-dependencies]
rustc_version = "0.2"
