[package]
name = "policy_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
policy_carrying_data = { path = "../policy_carrying_data" }
policy_core = { path = "../policy_core" }
opendp = { version = "0.7.0", features = ["untrusted"] }

[dev-dependencies]
csv = "*"
