[package]
name = "policy_privacy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
policy_carrying_data = { path = "../policy_carrying_data" }
policy_core = { path = "../policy_core" }
spin = { version = "0.9.8", features = ["rwlock"] }

[dev-dependencies]
csv = "*"
